--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import "../omarchy/current/theme/waybar.css";
 
 * {
-  background-color: @background;
+  background-color: transparent;
   color: @foreground;
 
   border: none;
@@ -11,12 +11,19 @@
   font-size: 12px;
 }
 
-.modules-left {
-  margin-left: 8px;
+window#waybar {
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
 }
 
-.modules-right {
-  margin-right: 8px;
+.modules-left,
+.modules-right,
+.modules-center {
+  background-color: @background;
+  border-radius: 10px;
+  padding: 2px 12px;
+  margin: 2px 6px;
 }
 
 #workspaces button {
@@ -56,7 +63,7 @@ tooltip {
 }
 
 #clock {
-  margin-left: 8.75px;
+  margin-left: 0;
 }
 
 .hidden {
