--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,13 +1,13 @@
 @import "../omarchy/current/theme/waybar.css";
 
 * {
-  background-color: transparent;
+  background-color: @background;
   color: @foreground;
 
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: CaskaydiaMono Nerd Font;
+  font-family: 'Berkeley Mono';
   font-size: 12px;
 }
 
@@ -21,16 +21,15 @@ window#waybar {
 .modules-right,
 .modules-center {
   background-color: @background;
-  border-radius: 10px;
-  padding: 2px 12px;
-  margin: 2px 6px;
+  border-radius: 0;
+  padding: 0px 8px;
+  margin: 0;
 }
 
 #workspaces button {
   all: initial;
   padding: 0 6px;
   margin: 0 1.5px;
-  min-width: 9px;
 }
 
 #workspaces button.empty {
@@ -47,7 +46,7 @@ window#waybar {
 #custom-screenrecording-indicator,
 #custom-update {
   min-width: 12px;
-  margin: 0 7.5px;
+  margin: 0 8px;
 }
 
 #custom-expand-icon {
