--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -32,16 +32,21 @@ window#waybar {
   background: transparent;
 }
 
-#workspaces button.empty {
-  opacity: 0.5;
+#workspaces button label {
+  color: @accent
 }
 
+/* #workspaces button.empty { */
+/*   opacity: 0.5; */
+/* } */
+
+
 #workspaces button.active label {
-  color: @accent;
+  color: @foreground
 }
 
 #custom-arch {
-  color: @accent;
+  color: @foreground;
   margin-left: 4px;
   margin-right: 8px;
 }
@@ -52,7 +57,7 @@ window#waybar {
 #network,
 #bluetooth,
 #pulseaudio,
-#custom-screenrecording-indicator,
+
 #custom-update {
   min-width: 12px;
   margin: 0 8px;
@@ -78,9 +83,13 @@ tooltip {
   opacity: 0;
 }
 
-#custom-screenrecording-indicator {
+
+#custom-screenrecording-indicator,
+#custom-idle-indicator,
+#custom-notification-silencing-indicator {
   min-width: 12px;
   margin-left: 5px;
+  margin-right: 0;
   font-size: 10px;
   padding-bottom: 1px;
 }
@@ -95,5 +104,10 @@ tooltip {
 }
 
 #custom-voxtype.recording {
+  color: #a55555;
+}
+
+#custom-idle-indicator.active,
+#custom-notification-silencing-indicator.active {
   color: #a55555;
 }
